--- a/index.html
+++ b/index.html
@@ -7,19 +7,19 @@
 <script>
 function downa()
 {
-	window.location.href="";
+	window.location.href="https://drive.google.com/file/d/1gwfSmgP0t-oSeN8m2Gz8_8_7L2tKXmMD/view?usp=drivesdk";
 }
 function downb()
 {
-	window.location.href="";
+	window.location.href="https://drive.google.com/file/d/18OKkysZ1thjcLCAkR1DONJDnzTmrOc0b/view?usp=drivesdk";
 }
 function downc()
 {
-	window.location.href="";
+	window.location.href="https://drive.google.com/file/d/1gpt8wWDjNscFmgoC2I-c5sUkGvPt6lxf/view?usp=drivesdk";
 }
 function downd()
 {
-	window.location.href="";
+	window.location.href="https://drive.google.com/file/d/1zlPyOKe_R-hi5GfC4Ynl5eNlHEjE_f5I/view?usp=drivesdk";
 }
 </script>
 
