Add title tag to index.html

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <html>
 <head>
+	<title>PapaSmurf</title>
     <meta name="viewport" content="width=device-width">
-		<meta name="description" content="Hi my Smurfs! Download your papa's apps over here!">
+	<meta name="description" content="Hi my Smurfs! Download your papa's apps over here!">
     <link href="95css.min.css" rel="stylesheet"/>
 	<link href="assets/papa3.png" rel="shortcut-icon" />
 </head>
